@@ -13,6 +13,7 @@ java {
 }
 
 application {
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
     mainClass.set("Application")
 }
 
@@ -24,6 +25,8 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    implementation("com.github.kwhat:jnativehook:2.2.2")
+    implementation("org.jline:jline:4.0.0")
 }
 
 tasks.test {
